# budget_management

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  demo.sh  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260303_0001_init_schema.py
app/: __init__.py  main.py
app/api/routes/: __init__.py  accounts.py  ai.py  analytics.py  budgets.py  debts.py  expenses.py  health.py  incomes.py  transfers.py
app/core/: __init__.py  config.py  errors.py  logging.py
app/db/: init_db.py  models.py  session.py
app/repositories/: __init__.py
app/schemas/: __init__.py  accounts.py  ai.py  analytics.py  budgets.py  debts.py  enums.py  transactions.py
app/services/: accounts.py  ai.py  analytics.py  budgets.py  common.py  debts.py  expenses.py  incomes.py  serializers.py  transfers.py
app/utils/: money.py
deploy/: frontend-nginx.conf
tests/: conftest.py  test_api.py
ui/: app.js  index.html  styles.css
ui/js/: api.js  app.js  state.js
ui/js/forms/: binders.js  helpers.js
ui/js/render/: accounts.js  analytics.js  debts.js  layout.js
